--- a/CSS/global960px.css
+++ b/CSS/global960px.css
@@ -31,23 +31,24 @@
     float: right;
   }
 
-  .MenuButton{
+  .LogoutButton{
+    margin-top: 20px;
     width: 100%;
-  }
-
-  .NavButton{
-    text-align: left;
-  }
-
-  nav ul{
-    max-height: 0;
   }
 
   .showing{
     max-height: 30em;
   }
 
+  nav ul{
+    padding: 0;
+    max-height: 0;
+  }
+
   nav ul li{
+    padding: 15px;
+    text-align: left;
+    box-sizing: border-box;
     width: 100%;
   }
 
