--- a/CSS/global320px.css
+++ b/CSS/global320px.css
@@ -1,9 +1,9 @@
 @media screen and (max-width:320px){
-  .HomeDiv{
+  .Home_div{
     width: 310px;
   }
 
-  .loginPage{
+  .Login_page{
     width: 310px;
   }
 }
