General style tweaks/custom radio button

--- a/CSS/global320px.css
+++ b/CSS/global320px.css
@@ -1,9 +1,5 @@
 @media screen and (max-width:320px){
-  .Home_div{
-    width: 310px;
-  }
-
-  .Login_page{
+  .Home_div, .Login_page{
     width: 310px;
   }
 }
