--- a/CSS/global.css
+++ b/CSS/global.css
@@ -157,7 +157,7 @@ nav ul li:hover{
 
 /* Homepage input style */
 
-.Home input{
+.Home_div input{
   font-family: "Roboto", sans-serif;
   outline: 0;
   width: 100%;
@@ -191,6 +191,97 @@ nav ul li:hover{
   /*box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.24);*/
 }
 
+/*Add new users style*/
+
+.New_user_form{
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  width: 480px;
+  margin: 0 auto 0px;
+  padding: 30px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.Radio ul li input{
+  width: 25px;
+  margin: 0;
+  position: absolute;
+  visibility: hidden;
+}
+
+.Radio ul li{
+  padding: 15px;
+  display: block;
+  width: 15%;
+}
+
+.Radio ul li label{
+  color: #BDBDBD;
+  transition: all 0.3s;
+  position: relative;
+  padding: 25px 25px 25px 80px;
+  height: 30px;
+  margin-left: -80px;
+  z-index: 9;
+  cursor: pointer;
+}
+
+.Radio ul li:hover label{
+  color: #2196F3;
+}
+
+.Radio ul li .check{
+  display: block;
+  position: relative;;
+  border: 2px solid #AAAAAA;
+  border-radius: 100%;
+  height: 20px;
+  width: 20px;
+  margin: -15px;
+  margin-left: -40px;
+  bottom: 6px;
+  z-index: 5;
+	transition: border .25s linear;
+}
+
+.Radio ul li:hover .check {
+  border: 2px solid #2196F3;
+}
+
+.Radio ul li .check::before {
+  display: block;
+	content: '';
+  position: absolute;
+  border-radius: 100%;
+  height: 10px;
+  width: 10px;
+  top: 5px;
+  left: 5px;
+  margin: auto;
+	transition: background 0.25s linear;
+}
+
+.Radio ul li input:checked ~ .check {
+  border: 2px solid #2196F3;
+}
+
+.Radio ul li input:checked ~ .check::before{
+  background: #2196F3;
+}
+
+.Radio ul li input:checked ~ label{
+  color: #2196F3;
+}
+
+.Radio span{
+  color: #BDBDBD;
+  position: relative;
+  margin-left: 15px;
+  top: 5px;
+  height: 30px;
+}
+
 /* Mailpage Style */
 
 .Mail{
@@ -215,9 +306,13 @@ nav ul li:hover{
   transition: width 0.5s ease-in-out;
 }
 
-.Button_left button{
+.Button_left button, .Button_right button{
   width: 100%;
   padding: 18px;
+}
+
+.New_user_form .Button_left, .New_user_form .Button_right{
+  width: 40%;
 }
 
 .Button_right{
@@ -241,10 +336,6 @@ nav ul li:hover{
 
 .Button_right:hover i{
   padding-left: 15px;
-}
-
-.Button_right button{
-  width: 100%;
 }
 
 /* Main */
