--- a/CSS/global960px.css
+++ b/CSS/global960px.css
@@ -50,4 +50,43 @@
   .Drop_menu{
     display: block;
   }
+
+  /*All user page table style*/
+
+  table, thead, tbody, th, td, tr {
+    display: block;
+    overflow: hidden;
+    width: 100%;
+  }
+  th{
+    display: none;
+  }
+
+  tr {
+    border-bottom: 1px solid #ccc;
+  }
+
+  td {
+    border: none;
+    border-bottom: 1px solid #dbdbdb;
+    position: relative;
+    padding-left: 40%;
+  }
+
+  td:before {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    padding-right: 10px;
+    white-space: nowrap;
+  }
+
+  td:nth-of-type(1):before { content: "E-mail"; }
+  td:nth-of-type(2):before { content: "Name"; }
+  td:nth-of-type(3):before { content: "Address"; }
+  td:nth-of-type(4):before { content: "Postal"; }
+  td:nth-of-type(5):before { content: "City"; }
+  td:nth-of-type(6):before { content: "Bank info"; }
+  td:nth-of-type(7):before { content: "Membership"; }
+
 }
