--- a/CSS/global960px.css
+++ b/CSS/global960px.css
@@ -43,8 +43,10 @@
   nav ul li{
     padding: 15px;
     text-align: left;
+    padding-left: 30px;
     box-sizing: border-box;
     width: 100%;
+    font-size: 15px;
   }
 
   .Drop_menu{
