--- a/CSS/global.css
+++ b/CSS/global.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+*{
+  box-sizing: border-box;
+}
+
 /* Login Style */
 
 .Login_page{
@@ -95,14 +99,26 @@ input:focus ~ .Bar:before, input:focus ~ .Bar:after { width: 50%; }
   margin: auto;
   margin-bottom: 50px;
   display: flex;
+  flex-flow: column nowrap;;
 }
 
 .Home{
   position: relative;
   z-index: 1;
   background: #FFFFFF;
-  width: 1060px;
+  width: 100%;
   margin: 0 auto 0px;
+  padding: 30px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.Home_info{
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  width: 100%;
+  margin: 0 auto 0px;
+  margin-top: 20px;
   padding: 30px;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
@@ -110,6 +126,11 @@ input:focus ~ .Bar:before, input:focus ~ .Bar:after { width: 50%; }
 .Content{
   padding-top: 10px;
   padding-bottom: 30px;
+}
+
+.Content img{
+  float: left;
+  width: 100%;
 }
 
 /** Homepage menu style **/
@@ -146,6 +167,7 @@ nav ul li:hover{
   cursor: pointer;
   padding: 15px 10px;
   margin-top: 5px;
+  padding-left: 25px;
   display: none;
   transition: background 0.7s ease;
 }
@@ -256,8 +278,8 @@ nav ul li:hover{
   border-radius: 100%;
   height: 10px;
   width: 10px;
-  top: 5px;
-  left: 5px;
+  top: 3px;
+  left: 3px;
   margin: auto;
 	transition: background 0.25s linear;
 }
