--- a/CSS/global960px.css
+++ b/CSS/global960px.css
@@ -7,6 +7,10 @@
     display: table-cell;
   }
 
+  .Log_div{
+    width: 100%;
+  }
+
   .Content{
     padding: 0;
   }
@@ -89,5 +93,11 @@
   td:nth-of-type(5):before { content: "City"; }
   td:nth-of-type(6):before { content: "Bank info"; }
   td:nth-of-type(7):before { content: "Membership"; }
+
+  .Log td:nth-of-type(1):before { content: "Date"; top: 10px;}
+  .Log td:nth-of-type(2):before { content: "Membership"; top: 10px;}
+  .Log td:nth-of-type(3):before { content: "Date"; top: 10px;}
+  .Log td:nth-of-type(4):before { content: "Check-in/out"; top: 10px;}
+  .Log td:nth-of-type(5):before { content: "Location"; top: 10px;}
 
 }
