--- a/CSS/global960px.css
+++ b/CSS/global960px.css
@@ -94,6 +94,10 @@
   td:nth-of-type(6):before { content: "Bank info"; }
   td:nth-of-type(7):before { content: "Membership"; }
 
+  .Log tr td{
+    padding-left: 40%;
+  }
+
   .Log td:nth-of-type(1):before { content: "Date"; top: 10px;}
   .Log td:nth-of-type(2):before { content: "Membership"; top: 10px;}
   .Log td:nth-of-type(3):before { content: "Date"; top: 10px;}
