General style updates

--- a/CSS/global.css
+++ b/CSS/global.css
@@ -226,10 +226,12 @@ nav ul li:hover{
     border: 0;
     font-size: 16px;
     width: auto;
+    cursor: pointer;
 }
 
 .Profile_input:focus{
   color: #2196F3;
+  cursor: auto;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
