--- a/CSS/global.css
+++ b/CSS/global.css
@@ -268,6 +268,38 @@ nav ul li:hover{
   font-family: "Roboto", sans-serif;
 }
 
+/*Location map style*/
+
+.map{
+  cursor: pointer;
+}
+
+iframe{
+  width: 100%;
+  max-height: 0;
+  padding: 0;
+  margin: 0;
+  transition: all 0.3s;
+}
+
+.Showing2{
+  max-height: 525px;
+  margin-top: 25px;
+  z-index: 1;
+}
+
+.Home_map{
+  position: relative;
+  z-index: 0;
+  background: #FFFFFF;
+  width: 99%;
+  height: auto;
+  margin: 0 auto 0px;
+  margin-top: -25px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  display: flex;
+}
+
 /*Profile page style*/
 
 .Profile_div{
@@ -626,35 +658,5 @@ input[type=date]{
 }
 
 /* TESTING AREA */
-
-.map{
-  cursor: pointer;
-}
-
-iframe{
-  width: 100%;
-  max-height: 0;
-  padding: 0;
-  margin: 0;
-  transition: all 0.3s;
-}
-
-.Showing2{
-  max-height: 525px;
-  margin-top: 25px;
-  z-index: 1;
-}
-
-.Home_map{
-  position: relative;
-  z-index: 0;
-  background: #FFFFFF;
-  width: 99%;
-  height: auto;
-  margin: 0 auto 0px;
-  margin-top: -25px;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-  display: flex;
-}
 
 /*
